<?xml version="1.0" encoding="utf-8"?>
<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >

  <LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >

    <LinearLayout
       android:id="@+id/pref_onoff"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_onoff"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
      <CheckBox
         android:id="@+id/pref_check_onoff"
         android:focusable="false"
         android:clickable="false"
         android:duplicateParentState="true"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:layout_margin="0dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_time"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
      <TextView
         android:id="@+id/pref_summary_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?android:attr/textColorTertiary"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_alarm"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
      <TextView
         android:id="@+id/pref_summary_alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?android:attr/textColorTertiary"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_volume"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_volume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
      <TextView
         android:id="@+id/pref_summary_volume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?android:attr/textColorTertiary"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_day"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
      <TextView
         android:id="@+id/pref_summary_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?android:attr/textColorTertiary"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_snooze_interval"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:duplicateParentState="true"
         >
        <TextView
           android:text="@string/pref_desc_snooze_interval"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:duplicateParentState="true"
           />
        <TextView
           android:id="@+id/pref_summary_snooze_interval"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="?android:attr/textColorTertiary"
           android:duplicateParentState="true"
           />
      </LinearLayout>
      <CheckBox
         android:id="@+id/pref_check_snooze"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center_vertical"
         android:focusable="false"
         android:clickable="false"
         android:duplicateParentState="true"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_snooze_timeout"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_snooze_timeout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:duplicateParentState="true"
         />
      <TextView
         android:id="@+id/pref_summary_snooze_timeout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="?android:attr/textColorTertiary"
         android:duplicateParentState="true"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

    <LinearLayout
       android:id="@+id/pref_vibration"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:minHeight="?android:attr/listPreferredItemHeight"
       >
      <TextView
         android:text="@string/pref_desc_vibration"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
      <CheckBox
         android:id="@+id/pref_check_vibration"
         android:focusable="false"
         android:clickable="false"
         android:duplicateParentState="true"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         />
    </LinearLayout>

    <View
       android:layout_width="fill_parent"
       android:layout_height="1dp"
       android:background="?android:attr/listDivider"
       />

  </LinearLayout>

</ScrollView>
